--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Nfq-Bot",
+  "name": "ARIESZ-BOT",
   "version": "1.3.0",
   "description": "Customizable WhatsApp Bot",
   "depecrated": false,
@@ -21,7 +21,7 @@
   ],
   "homepage": "https://github.com/Nurutomo/wabot-aq",
   "author": {
-    "name": "arpunchs"
+    "name": "realasky"
   },
   "repository": {
     "url": "https://github.com/Nurutomo/wabot-aq.git"
